/cp 2011-09-28  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/45278
	* typeck.c (cp_build_binary_op): With -Wextra, warn for ordered
	comparison of pointer with zero.

/testsuite
2011-09-28  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/45278
	* g++.dg/warn/Wextra-3.C: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@179321 138bc75d-0d04-0410-961f-82ee72b054a4